--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <button id="yellow"></button>
         <button id="blue"></button>
     </div>
-
+    <div class="hardCheck">
+        <input type="checkbox" name="hardMode" id="hard">
+        <label for="hard">Hard Mode</label>
+    </div>
     <div class="buttons">
         <button id="startBtn">Start</button>
         <button id="resetBtn">Reset</button>
